main page + beginning of projects

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,16 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Welcome!</h1>
   <p class="lead">
-    <img src="../assets/images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    I'm Garance, a cookies addict as well as an engineering student!
+    </p>
+   <p> <img src="../assets/images/cookies.jpg" alt="Reese's Peanut ButterCup cookies"><br>
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" href="http://www.hersheys.com/reeses/recipes/detail.aspx?id=3012&name=Peanut-Butter-Cup-Cookies&category=cookies">get that recipe! <span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>What you'll find here</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+Here, you can find info about me : my education, the jobs I had, what I like doing...
+  Mostly, you'll find that it's about computer science, travels, and cooking !</p>
 </div>
