--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -18,7 +18,7 @@
   <div ng-if="skill.domain == 'Languages'">
   <ul>
         <li>
-          In {{skill.name}}, my level is {{skill.level}} !
+          In {{skill.name}}, I'm {{skill.level}} !
           <div ng-if="skill.Certificate != 'none'">
             I passed the {{skill.Certificate}} to prove it !
             </div>
