progress bar for the skills !! :)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,9 @@
     </p>
    <p> <img src="../assets/images/cookies.jpg" alt="Reese's Peanut ButterCup cookies"><br>
   </p>
-  <p><a class="btn btn-lg btn-success" href="http://www.hersheys.com/reeses/recipes/detail.aspx?id=3012&name=Peanut-Butter-Cup-Cookies&category=cookies">get that recipe! <span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success"
+        href="http://www.hersheys.com/reeses/recipes/detail.aspx?id=3012&name=Peanut-Butter-Cup-Cookies&category=cookies">
+    get that recipe! <span class="glyphicon glyphicon glyphicon-hand-up"></span></a></p>
 </div>
 
 <div class="row marketing">
