--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,1 +1,5 @@
-<p>This is the page where I tell you everything about my projects !</p>
+<p>This is the page where I tell you everything about my projects !
+Mostly school projects, but also side projects like the Nuit de l'info event,
+  a yearly hard programming night desgined for IT students where they confront their different skills.
+  <a href="http://www.nuitdelinfo.com/">(check it out (FR)!)</a></p>
+
