all the controllers done

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
     </p>
    <p> <img src="../assets/images/cookies.jpg" alt="Reese's Peanut ButterCup cookies"><br>
   </p>
-  <p><a class="btn btn-lg btn-success"
+  <p><a class="btn btn-lg btn-info"
         href="http://www.hersheys.com/reeses/recipes/detail.aspx?id=3012&name=Peanut-Butter-Cup-Cookies&category=cookies">
     get that recipe! <span class="glyphicon glyphicon glyphicon-hand-up"></span></a></p>
 </div>
