a bit of colors in there !

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,18 +1,19 @@
 <div class="jumbotron">
   <h1>Welcome!</h1>
+
   <p class="lead">
     I'm Garance, a cookies addict as well as an engineering student!
-    </p>
-   <p> <img src="../assets/images/cookies.jpg" alt="Reese's Peanut ButterCup cookies"><br>
   </p>
+
+  <p><img src="../assets/images/cookies.jpg" alt="Reese's Peanut ButterCup cookies"><br>
+  </p>
+
   <p><a class="btn btn-lg btn-info"
         href="http://www.hersheys.com/reeses/recipes/detail.aspx?id=3012&name=Peanut-Butter-Cup-Cookies&category=cookies">
     get that recipe! <span class="glyphicon glyphicon glyphicon-hand-up"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>What you'll find here</h4>
-  <p>
-Here, you can find info about me : my education, the jobs I had, what I like doing...
-  Mostly, you'll find that it's about computer science, travels, and cooking !</p>
+  <h2>What you'll find here</h2>
+  <div class="row marketing">
+    <p>Here, you can find info about me : my education, the jobs I had, what I like doing...<br/>
+      Mostly, you'll find that it's about computer science, travels, and cooking !</p>
+  </div>
 </div>
