--- a/app/styles/subViews.css
+++ b/app/styles/subViews.css
@@ -4,13 +4,20 @@
 .nav > li > a {
   color: #260303;!important;
 }
-/*body.ng-scope.div.container {
-  backgound-color:#F67979;!important;
-}*/
+
 div.jumbotron.ng-scope {
   background:#F67979;!important;
 }
 
 div.panel {
   background:#F67979;!important;
+  border-width: 0px;
+}
+
+div.panel-heading { /*maybe stg else here, eg darker*/
+  background:#F67979;!important;
+}
+
+div.progress{
+  width: 300px;
 }
