--- a/app/views/work.html
+++ b/app/views/work.html
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<p>There isn't much to say yet about my work experience :
+I have only had part time jobs, while studying. </p>
