si si, c'est encore l'heure !

--- a/app/views/hobbies.html
+++ b/app/views/hobbies.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <h3 class="panel-title">What you must know besides computer science</h3>
   </div>
-  <div class="panel-body">
+  <p class="panel-body">
     <p ng-repeat="hobby in funStuff.hobbies">
       I LOVE {{hobby.name}} !
     </p>
@@ -13,23 +13,20 @@
       <carousel interval="carousel_interval">
         <slide ng-repeat="slide in slides" active="slide.active">
           <img ng-src="{{slide.image}}" style="max-height:300px; margin:0 auto;">
-          <div class="carousel-caption">
-            <h4>Slide {{$index}}</h4>
-            <p>{{slide.text}}</p>
-          </div>
         </slide>
       </carousel>
     </div>
-
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     <div class="panel panel-default">
       <div class="panel-heading">About travelling</div>
 
       <p ng-repeat="holiday in funStuff.Travels">
-        In {{holiday.year}}, I went to {{holiday.country}}. I stayed in {{holiday.city}} at {{holiday['stayed at']}}.
+      In {{holiday.year}}, I went to {{holiday.country}} !
+        I stayed in {{holiday.city}} at {{holiday['stayed at']}}.
         <br/>
         This trip only lasted {{holiday.duration}}, but I can still tell you that my favourite place there is
         {{holiday['fav place']}} !!
-        <
+
         <br/>Here's a picture ! <br/>
         <img src="{{holiday.pic}}" class="img-thumbnail" alt="{{holiday['fav place']}}" width="304" height="236">
       </p>
@@ -38,5 +35,4 @@
     </div>
   </div>
 </div>
-
 
